--- a/pom.xml
+++ b/pom.xml
@@ -379,6 +379,27 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>findbugs-maven-plugin</artifactId>
+                <version>3.0.5</version>
+                <configuration>
+                    <effort>Max</effort>
+                    <threshold>Low</threshold>
+                    <failOnError>false</failOnError>
+                    <!-- put legacy XML report into directory where jQA FindBugs Plugin scans it -->
+                    <findbugsXmlOutputDirectory>${project.build.directory}/classes</findbugsXmlOutputDirectory>
+                </configuration>
+                <executions>
+                    <execution>
+                        <!-- use same phase as and put before jqassistant:scan to enable scanning of findbugs.xml -->
+                        <phase>post-integration-test</phase>
+                        <goals>
+                            <goal>check</goal>
+                        </goals>
+                    </execution>
+                </executions>
+            </plugin>
 
             <!-- jQAssistant -->
             <plugin>
@@ -395,16 +416,17 @@
                         <configuration>
                             <failOnSeverity>CRITICAL</failOnSeverity>
                             <warnOnSeverity>MINOR</warnOnSeverity>
-                            <!--
-                            <groups>
-                                <group>default</group>
-                            </groups>
-                            -->
+                            <concepts>
+                                <concept>findbugs:ClassHasBugs</concept>
+                            </concepts>
                             <scanIncludes>
                                 <scanInclude>
                                     <path>${project.basedir}/.git</path>
                                 </scanInclude>
                             </scanIncludes>
+                            <scanProperties>
+                                <jqassistant.plugin.findbugs.filename>findbugsXml.xml</jqassistant.plugin.findbugs.filename>
+                            </scanProperties>
                             <reportProperties>
                                 <graphml.report.directory>${session.topLevelProject.build.directory}/html/graphml</graphml.report.directory>
                                 <asciidoc.report.directory>${session.topLevelProject.build.directory}/html</asciidoc.report.directory>
@@ -414,20 +436,16 @@
                         </configuration>
                     </execution>
                 </executions>
-                <!--
-                <configuration>
-                    <store>
-                        <uri>bolt://localhost:7687</uri>
-                        <username>neo4j</username>
-                        <password>admin</password>
-                    </store>
-                </configuration>
-                -->
                 <dependencies>
                     <dependency>
                         <groupId>de.kontext-e.jqassistant.plugin</groupId>
                         <artifactId>jqassistant.plugin.git</artifactId>
                         <version>1.3.0</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>de.kontext-e.jqassistant.plugin</groupId>
+                        <artifactId>jqassistant.plugin.findbugs</artifactId>
+                        <version>1.3.3</version>
                     </dependency>
                     <dependency>
                         <groupId>org.jqassistant.contrib.plugin</groupId>
