--- a/pom.xml
+++ b/pom.xml
@@ -43,6 +43,9 @@
 
         <!-- jQAssistant and asciidoctor -->
         <jqassistant.version>1.3.0</jqassistant.version>
+		
+		 <stagemonitor.version>0.88.4-Neo4J-Integration-SNAPSHOT</stagemonitor.version>
+	
     </properties>
 
     <dependencyManagement>
@@ -268,6 +271,32 @@
         <dependency>
             <groupId>com.googlecode.json-simple</groupId>
             <artifactId>json-simple</artifactId>
+        </dependency>
+        <!-- Stagemonitor Application Performance Management -->
+        <dependency>
+          <groupId>org.stagemonitor</groupId>
+          <artifactId>stagemonitor-web-servlet</artifactId>
+          <version>${stagemonitor.version}</version>
+        </dependency>
+        <dependency>
+          <groupId>org.stagemonitor</groupId>
+          <artifactId>stagemonitor-tracing-elasticsearch</artifactId>
+          <version>${stagemonitor.version}</version>
+        </dependency>
+        <dependency>
+          <groupId>org.stagemonitor</groupId>
+          <artifactId>stagemonitor-logging</artifactId>
+          <version>${stagemonitor.version}</version>
+        </dependency>
+        <dependency>
+          <groupId>org.stagemonitor</groupId>
+          <artifactId>stagemonitor-os</artifactId>
+          <version>${stagemonitor.version}</version>
+        </dependency>
+        <dependency>
+          <groupId>org.stagemonitor</groupId>
+          <artifactId>stagemonitor-alerting</artifactId>
+          <version>${stagemonitor.version}</version>
         </dependency>
     </dependencies>
 
