--- a/pom.xml
+++ b/pom.xml
@@ -12,7 +12,7 @@
     <properties>
 
         <!-- Generic properties -->
-        <java.version>1.7</java.version>
+        <java.version>8</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 
@@ -39,10 +39,8 @@
         <dandelion.version>1.1.1</dandelion.version>
         <dandelion.datatables.version>1.1.0</dandelion.datatables.version>
 
-        <cobertura.version>2.7</cobertura.version>
-
-        <!-- jQAssistant and asciidoctor -->
-        <jqassistant.version>1.3.0</jqassistant.version>
+        <!-- jQAssistant -->
+        <jqassistant.version>1.8.0</jqassistant.version>
     </properties>
 
     <dependencyManagement>
@@ -270,6 +268,24 @@
             <groupId>com.googlecode.json-simple</groupId>
             <artifactId>json-simple</artifactId>
         </dependency>
+        
+        <dependency>
+            <groupId>javax.xml.bind</groupId>
+            <artifactId>jaxb-api</artifactId>
+            <version>2.3.1</version>
+        </dependency>
+        <dependency>
+            <groupId>com.sun.xml.bind</groupId>
+            <artifactId>jaxb-core</artifactId>
+            <version>2.3.0</version>
+        </dependency>
+        <dependency>
+            <groupId>com.sun.xml.bind</groupId>
+            <artifactId>jaxb-impl</artifactId>
+            <version>2.3.1</version>
+        </dependency>
+
+
     </dependencies>
 
     <!-- Maven plugin versions are mentioned in order to guarantee the build reproducibility in the long term -->
@@ -364,43 +380,6 @@
                     <path>/petclinic</path>
                 </configuration>
             </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>cobertura-maven-plugin</artifactId>
-                <version>${cobertura.version}</version>
-                <configuration>
-                    <check/>
-                </configuration>
-                <executions>
-                    <execution>
-                        <goals>
-                            <goal>clean</goal>
-                            <goal>check</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>findbugs-maven-plugin</artifactId>
-                <version>3.0.5</version>
-                <configuration>
-                    <effort>Max</effort>
-                    <threshold>Low</threshold>
-                    <failOnError>false</failOnError>
-                    <!-- put legacy XML report into directory where jQA FindBugs Plugin scans it -->
-                    <findbugsXmlOutputDirectory>${project.build.directory}/classes</findbugsXmlOutputDirectory>
-                </configuration>
-                <executions>
-                    <execution>
-                        <!-- use same phase as and put before jqassistant:scan to enable scanning of findbugs.xml -->
-                        <phase>post-integration-test</phase>
-                        <goals>
-                            <goal>check</goal>
-                        </goals>
-                    </execution>
-                </executions>
-            </plugin>
 
             <!-- jQAssistant -->
             <plugin>
@@ -415,86 +394,73 @@
                             <goal>analyze</goal>
                         </goals>
                         <configuration>
-                            <failOnSeverity>CRITICAL</failOnSeverity>
                             <warnOnSeverity>MINOR</warnOnSeverity>
-                            <!--<concepts>
-                                <concept>findbugs:ClassHasBugs</concept>
-                            </concepts>-->
+                            <failOnSeverity>CRITICAL</failOnSeverity>
+                            <!--
+                            <scanProperties>
+                                <maven3.dependencies.enable>true</maven3.dependencies.enable>
+                                <maven3.dependencies.includes>org.springframework*:*:*</maven3.dependencies.includes>
+                            </scanProperties>
+                            -->
+                            <groups>
+                                <group>default</group>
+                                <!--
+                                <group>jqassistant-dashboard:Default</group>
+                                -->
+                            </groups>
+
                             <scanIncludes>
                                 <scanInclude>
                                     <path>${project.basedir}/.git</path>
                                 </scanInclude>
                             </scanIncludes>
-                            <scanProperties>
-                                <jqassistant.plugin.findbugs.filename>findbugsXml.xml</jqassistant.plugin.findbugs.filename>
-                            </scanProperties>
-                            <reportProperties>
-                                <graphml.report.directory>${session.topLevelProject.build.directory}/html/graphml</graphml.report.directory>
-                                <asciidoc.report.directory>${session.topLevelProject.build.directory}/html</asciidoc.report.directory>
-                                <asciidoc.report.rule.directory>${session.topLevelProject.basedir}/jqassistant</asciidoc.report.rule.directory>
-                                <asciidoc.report.file.include>index.adoc</asciidoc.report.file.include>
-                            </reportProperties>
+                            <rule>
+                                <defaultConceptSeverity>INFO</defaultConceptSeverity>
+                            </rule>
                         </configuration>
                     </execution>
                 </executions>
-                <!--
                 <configuration>
                     <store>
+                        <!--
                         <uri>bolt://localhost:7687</uri>
                         <username>neo4j</username>
                         <password>admin</password>
+                        <embedded>
+                            <listenAddress>localhost</listenAddress>
+                            <httpPort>7474</httpPort>
+                            <boltPort>7687</boltPort>
+                        </embedded>
+                        -->
                     </store>
                 </configuration>
-                -->
                 <dependencies>
                     <dependency>
-                        <groupId>de.kontext-e.jqassistant.plugin</groupId>
-                        <artifactId>jqassistant.plugin.git</artifactId>
-                        <version>1.3.0</version>
-                    </dependency>
-                    <dependency>
-                        <groupId>de.kontext-e.jqassistant.plugin</groupId>
-                        <artifactId>jqassistant.plugin.findbugs</artifactId>
-                        <version>1.3.3</version>
+                        <groupId>org.jqassistant.contrib.plugin</groupId>
+                        <artifactId>jqassistant-plantuml-rule-plugin</artifactId>
+                        <version>1.8.0</version>
                     </dependency>
                     <dependency>
                         <groupId>org.jqassistant.contrib.plugin</groupId>
-                        <artifactId>jqassistant-asciidoc-report-plugin</artifactId>
-                        <version>1.0.0</version>
+                        <artifactId>jqassistant-dashboard-plugin</artifactId>
+                        <version>1.8.0</version>
                     </dependency>
+                    <!-- Optional
+                    <dependency>
+                        <groupId>org.jqassistant.contrib.plugin</groupId>
+                        <artifactId>jqassistant-apoc-plugin</artifactId>
+                        <version>1.8.0</version>
+                    </dependency>
+                    <dependency>
+                        <groupId>org.jqassistant.contrib.plugin</groupId>
+                        <artifactId>jqassistant-graph-algorithms-plugin</artifactId>
+                        <version>1.8.0</version>
+                    </dependency>
+                    -->
                 </dependencies>
             </plugin>
         </plugins>
     </build>
-    <reporting>
-        <plugins>
-            <!-- integrate maven-cobertura-plugin to project site -->
-            <plugin>
-                <groupId>org.codehaus.mojo</groupId>
-                <artifactId>cobertura-maven-plugin</artifactId>
-                <version>${cobertura.version}</version>
-                <reportSets>
-                    <reportSet>
-                        <reports>
-                            <report>cobertura</report>
-                        </reports>
-                    </reportSet>
-                </reportSets>
-            </plugin>
-            <plugin>
-                <groupId>com.buschmais.jqassistant</groupId>
-                <artifactId>jqassistant-maven-plugin</artifactId>
-                <version>${jqassistant.version}</version>
-                <reportSets>
-                    <reportSet>
-                        <reports>
-                            <report>report</report>
-                        </reports>
-                    </reportSet>
-                </reportSets>
-            </plugin>
-        </plugins>
-    </reporting>
     <profiles>
 		<profile>
 			<id>bower-install</id>
