--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: java
-jdk: oraclejdk8
+jdk: openjdk11
 before_install:
 # Install GraphViz to test draw figures via jQAssistant
 - "sudo apt-get install graphviz"
